@@ -10,18 +10,18 @@
  ******************************************************************************/
 package org.eclipse.scout.rt.client.ui.form.fields.longfield;
 
-import java.text.ParsePosition;
+import java.math.BigDecimal;
 
+import org.eclipse.scout.commons.annotations.ClassId;
 import org.eclipse.scout.commons.annotations.ConfigProperty;
-import org.eclipse.scout.commons.annotations.ConfigPropertyValue;
 import org.eclipse.scout.commons.annotations.Order;
 import org.eclipse.scout.commons.exception.ProcessingException;
 import org.eclipse.scout.commons.logger.IScoutLogger;
 import org.eclipse.scout.commons.logger.ScoutLogManager;
 import org.eclipse.scout.rt.client.ui.form.fields.numberfield.AbstractNumberField;
-import org.eclipse.scout.rt.shared.ScoutTexts;
 import org.eclipse.scout.rt.shared.data.form.ValidationRule;
 
+@ClassId("cfc961a1-195f-491d-94c5-762f9d86efee")
 public abstract class AbstractLongField extends AbstractNumberField<Long> implements ILongField {
   private static final IScoutLogger LOG = ScoutLogManager.getLogger(AbstractLongField.class);
 
@@ -36,20 +36,47 @@ public abstract class AbstractLongField extends AbstractNumberField<Long> implem
   /*
    * Configuration
    */
-  @ConfigProperty(ConfigProperty.LONG)
-  @Order(250)
-  @ConfigPropertyValue("null")
-  @ValidationRule(ValidationRule.MIN_VALUE)
+  /**
+   * @deprecated Will be removed with scout 5.0, use {@link #getConfiguredMinValue()}.<br>
+   *             As long as this deprecated version is overridden in subclasses. This setting wins over
+   *             {@link #getConfiguredMinValue()} in {@link #initConfig()}.
+   */
+  @Deprecated
   protected Long getConfiguredMinimumValue() {
-    return null;
+    return getConfiguredMinValue();
   }
 
+  /**
+   * @deprecated Will be removed with scout 5.0, use {@link #getConfiguredMaxValue()}.<br>
+   *             As long as this deprecated version is overridden in subclasses. This setting wins over
+   *             {@link #getConfiguredMaxValue()} in {@link #initConfig()}.
+   */
+  @Deprecated
+  protected Long getConfiguredMaximumValue() {
+    return getConfiguredMaxValue();
+  }
+
+  @Override
+  @ConfigProperty(ConfigProperty.LONG)
+  @Order(250)
+  @ValidationRule(ValidationRule.MIN_VALUE)
+  protected Long getConfiguredMinValue() {
+    return Long.MIN_VALUE;
+  }
+
+  @Override
   @ConfigProperty(ConfigProperty.LONG)
   @Order(260)
-  @ConfigPropertyValue("null")
   @ValidationRule(ValidationRule.MAX_VALUE)
-  protected Long getConfiguredMaximumValue() {
-    return null;
+  protected Long getConfiguredMaxValue() {
+    return Long.MAX_VALUE;
+  }
+
+  @Override
+  @Order(270)
+  @ConfigProperty(ConfigProperty.INTEGER)
+  protected int getConfiguredMaxIntegerDigits() {
+    return 19;
   }
 
   @Override
@@ -59,22 +86,31 @@ public abstract class AbstractLongField extends AbstractNumberField<Long> implem
     setMaxValue(getConfiguredMaximumValue());
   }
 
+  /**
+   * Set the minimum value for this field. If value is <code>null</code>, it is replaced by Long.MIN_VALUE.
+   */
+  @Override
+  public void setMinValue(Long value) {
+    super.setMinValue(value == null ? Long.MIN_VALUE : value);
+  }
+
+  /**
+   * Set the maximum value for this field. If value is <code>null</code>, it is replaced by Long.MAX_VALUE.
+   */
+  @Override
+  public void setMaxValue(Long value) {
+    super.setMaxValue(value == null ? Long.MAX_VALUE : value);
+  }
+
+  /**
+   * uses {@link #parseToBigDecimalInternal(String)} to parse text and returns the result as Long
+   */
   @Override
   protected Long parseValueInternal(String text) throws ProcessingException {
     Long retVal = null;
-    if (text == null) {
-      text = "";
-    }
-    else {
-      text = text.trim();
-    }
-    if (text.length() > 0) {
-      ParsePosition p = new ParsePosition(0);
-      Number n = createNumberFormat().parse(text, p);
-      if (p.getErrorIndex() >= 0 || p.getIndex() != text.length()) {
-        throw new ProcessingException(ScoutTexts.get("InvalidNumberMessageX", text));
-      }
-      retVal = new Long(n.longValue());
+    BigDecimal parsedVal = parseToBigDecimalInternal(text);
+    if (parsedVal != null) {
+      retVal = Long.valueOf(parsedVal.longValueExact());
     }
     return retVal;
   }
